# syswatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  build.spec  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker.yml  release.yml  security.yml
docs/: monitoring-setup.md
resources/: styles.qss
src/: main.py
src/agent/: syswatch_agent.py
src/backend/: analyzer.py  api_server.py  collector.py  storage.py
src/gui/: incident_view.py  main_window.py  metrics_view.py  root_cause_view.py  service_panel.py  settings_dialog.py  styles.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_analyzer.py  test_collector.py  test_gui.py
tests/integration/: __init__.py  test_api.py
