[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Ruff — Fast Python linter ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in default args
    "B006",  # mutable default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

# ── Black — Code formatter ────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | dist
  | build
  | __pycache__
)/
'''

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",           # Entry point — not unit-testable in isolation
    "src/gui/*",             # GUI requires Qt display
    "tests/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

# ── Mypy (optional static typing) ────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
